--- a/src/main/resources/paleoftheancients/localization/eng/characters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/characters.json
@@ -4,7 +4,9 @@
     "TEXT": [
       "All... my... efforts...",
       "My... Revenge...",
-      "..Cursed.... Puppet....."
+      "..Cursed.... Puppet.....",
+      "Caw... caw...",
+      "..c..aw......."
     ]
   }
 }
