Patched the patch. Showman got a relic. Added relic outlines.

--- a/src/main/resources/paleoftheancients/localization/eng/relics.json
+++ b/src/main/resources/paleoftheancients/localization/eng/relics.json
@@ -28,5 +28,12 @@
     "DESCRIPTIONS": [
       "The first 2 #bpowers each combat are played 3 times."
     ]
+  },
+  "paleoftheancients:SoulOfTheShowman": {
+    "NAME": "Essence of Showmanship",
+    "FLAVOR": "If you look real closely, there actually is something up my sleeve.",
+    "DESCRIPTIONS": [
+      "Whenever you #rExhaust a card, play a #bcopy of it."
+    ]
   }
 }
