Bugfixes with cultist intents and elites killed display.

--- a/src/main/resources/paleoftheancients/localization/eng/score_bonuses.json
+++ b/src/main/resources/paleoftheancients/localization/eng/score_bonuses.json
@@ -2,7 +2,7 @@
   "paleoftheancients:ElitesKilled": {
     "NAME": "",
     "DESCRIPTIONS": [
-      "", "Act"," Elites Killed"
+      "", "Act"," Kills"
     ]
   }
 }
