Vixen: Fixed solar beam intent when a defiant proc happens on the prior turn. Fixed confusion power application. Fixed endure tooltip and interaction with multi-hit attacks. Relic now only triggers on attack damage.
Renamed thorton johnson to thorton minutepen in english.

--- a/src/main/resources/paleoftheancients/localization/eng/relics.json
+++ b/src/main/resources/paleoftheancients/localization/eng/relics.json
@@ -37,10 +37,10 @@
     ]
   },
   "paleoftheancients:SoulOfTheThorton": {
-    "NAME": "Businesscard of Thorton Johnson",
+    "NAME": "Businesscard of Thorton Minutepen",
     "FLAVOR": "What was that guy even doing here?",
     "DESCRIPTIONS": [
-      "Identifies you as NL #y\"Thorton #yJohnson\".",
+      "Identifies you as NL #y\"Thorton #yMinutepen\". NL #bBank #bManager.",
       "the Thorton?"
     ]
   }
