Removed possible post-combat crashsource.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -132,7 +132,7 @@
   },
 
   "paleoftheancients:Thorton": {
-    "NAME": "Thorton Johnson",
+    "NAME": "Thorton Minutepen",
     "MOVES": [
       "Crashing Stocks",
       "Cash Buffer",
