General: Relics no longer double obtainable (hopefully).
Bard:
Fixed Inspiration.

Hexaghost & Cultist now trigger death effects.

--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -284,7 +284,7 @@
       "The next #b",
       " action",
       " actions",
-      " you perform is #b",
+      " you perform ","is","are"," #b",
       "% stronger."
     ]
   },
