Disabled slimeboss finally. Bugfix with multiple relicrows in the deja vu event. New relics for silent, ironcluck and hexaghost. New joke relic shoutout for blurred aspect.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -148,6 +148,9 @@
       "Escape"
     ]
   },
+  "paleoftheancients:BASlime": {
+    "NAME": "Blurred Aspect"
+  },
 
   "paleoftheancients:N": {
     "NAME": "Vengeful Ancient",
