--- a/src/main/resources/paleoftheancients/localization/zhs/events.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/events.json
@@ -13,9 +13,7 @@
       "一旦你触摸它，你周围的空间就扭曲成黑暗，雾笼罩着虚无……"
     ],
     "OPTIONS": [
-      "[拾起物品] #y违抗使命",
-      "[无视物品] #y接近心脏",
-      "继续"
+      "拾起物品"
     ]
   },
 
