--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -103,6 +103,22 @@
     ]
   },
 
+  "paleoftheancients:Reimu": {
+    "MOVES": [
+      "Yin-Yang Treasured Orbs",
+      "Great Duplex Barrier",
+      "Evil-Sealing Circle"
+    ],
+    "NAME": "Shrine Maiden of Paradise",
+    "DIALOG": [
+      "Another day, another incident."
+    ]
+
+  },
+  "paleoftheancients:YinYangOrb": {
+    "NAME": "Yin-Yang Orb"
+  },
+
   "paleoftheancients:BardBoss": {
     "NAME": "The Bard",
     "MOVES": [
