--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -317,7 +317,7 @@
 
   "paleoftheancients:PositionPower": {
     "NAME": "Spell Card Rules",
-    "DESCRIPTIONS": ["You are in lane #b", ". Whenever you play a #ySkill, move #yUp #b1 lane. Whenever you play an #yAttack, move #yDown #b1 lane."]
+    "DESCRIPTIONS": ["You are in lane #b", ". NL Whenever you play a #ySkill, move #yUp #b1 lane. NL Whenever you play an #yAttack, move #yDown #b1 lane."]
   },
   "paleoftheancients:MonsterPositionPower": {
     "NAME": "Spell Card Rules",
@@ -325,11 +325,15 @@
   },
   "paleoftheancients:HakureiShrineMaidenPower": {
     "NAME": "Hakurei Shrine Maiden",
-    "DESCRIPTIONS": ["At the end of her turn, summon up to #b"," #yYin-Yang #yOrbs. If there are no #yYin-Yang #yOrbs alive, summon #b"," instead."]
+    "DESCRIPTIONS": ["At the end of her turn, summon up to #b"," #yYin-Yang #yOrbs. If there are no #yYin-Yang #yOrbs alive, summon #b"," instead. Whenever a Yin-Yang Orb is destroyed through damage, gain #b1 #yBuffer."]
+  },
+  "paleoftheancients:DeathBombPower": {
+    "NAME": "Quick Reflexes",
+    "DESCRIPTIONS": ["If Reimu would die, become invincible until next turn and change Intent to use #b2 Bombs. NL Requires at least #b1 Bomb to take effect. NL No, I will not tell you what that means."]
   },
   "paleoftheancients:SealedPower": {
     "NAME": "Sealed",
-    "DESCRIPTIONS": ["At the start of your turn, discard #b", " card.", " cards."]
+    "DESCRIPTIONS": ["At the start of your turn, exhaust #b", " card.", " cards.", " and lose [E] ."]
   },
   "paleoftheancients:ShotTypeBasePower": {
     "NAME": "Limited Range",
@@ -340,7 +344,7 @@
   "paleoftheancients:ShotTypeAmuletPower": {
     "NAME": "Shottype: Homing Amulet",
     "DESCRIPTIONS": [
-      "Will only deal damage to you if you were directly in front of it at some point this turn."
+      "Will only deal damage to you if you were in the same lane at some point this turn. NL An attacking orb rotates clockwise."
     ]
   },
   "paleoftheancients:ShotTypeNeedlePower": {
