Finalized integration of actlikeit. Fixed a softlock with the Restore Relics VFX.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -115,10 +115,7 @@
       "Divine Arts \"Omnidirectional Oni-Binding Circle\"",
       "Great Barrier \"Hakurei Danmaku Barrier\""
     ],
-    "NAME": "Shrine Maiden of Paradise",
-    "DIALOG": [
-    ]
-
+    "NAME": "Shrine Maiden of Paradise"
   },
   "paleoftheancients:YinYangOrb": {
     "NAME": "Yin-Yang Orb"
