--- a/src/main/resources/paleoftheancients/localization/eng/ui.json
+++ b/src/main/resources/paleoftheancients/localization/eng/ui.json
@@ -106,7 +106,7 @@
     "TEXT": [
       "Extra Lives",
       "Bombs",
-      "She has a life. NL You do not.",
+      "Will revive upon death.",
       "These are required for and subsequently used up in certain attacks."
     ]
   }
