Timepiece now protects for the entire turn. Buffed Defect's HP. Defect orbs will now survive up to 30 HP worth of AoE damage. Single target attacks will still instantly evoke them. Added custom score entry for beating Pale. Changed its boss' end theme to heart's.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -21,28 +21,28 @@
     "DIALOG": [
       "#yPassive: At the end of turn, deal #b",
       " damage. NL #yEvoke: Deal #b",
-      " damage. NL #yDamaging an orb will evoke it!"
+      " damage. NL #yAttacking an orb will evoke it!"
     ]
   },
   "paleoftheancients:frostorb": {
     "DIALOG": [
       "#yPassive: At the end of turn, gain #b",
       " #yBlock. NL #yEvoke: Gain #b",
-      " #yBlock. NL #yDamaging an orb will evoke it!"
+      " #yBlock. NL #yAttacking an orb will evoke it!"
     ]
   },
   "paleoftheancients:darkorb": {
     "DIALOG": [
       "#yPassive: At the end of turn, increase this Orb's damage by #b",
       ". NL #yEvoke: Deal #b",
-      " damage to you. NL #yDamaging an orb will evoke it!"
+      " damage to you. NL #yAttacking an orb will evoke it!"
     ]
   },
   "paleoftheancients:plasmaorb": {
     "DIALOG": [
       "#yPassive: At the start of turn, gain #r",
       " Strength this turn . NL #yEvoke: Gain #r",
-      " Strength this turn. NL #yDamaging an orb will evoke it!"
+      " Strength this turn. NL #yAttacking an orb will evoke it!"
     ]
   },
 
