--- a/src/main/resources/paleoftheancients/localization/zhs/events.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/events.json
@@ -9,11 +9,11 @@
       "一条能够解放我们所有人的……",
       " NL NL ",
       "如果你足够强大。",
-      " NL NL 一个小小的，闪闪发光的，圆形的物体落在你面前的地上。",
+      " NL NL 一个小小的，闪闪发光的，圆形的物体落在你面前的地上。只要看着它，你就会 #y感到 #r@恐惧@ ",
       "一旦你触摸它，你周围的空间就扭曲成黑暗，雾笼罩着虚无……"
     ],
     "OPTIONS": [
-      "拾起物品"
+      "拾起物体"
     ]
   },
 
