--- a/src/main/resources/paleoftheancients/localization/zhs/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/monsters.json
@@ -102,6 +102,24 @@
       "@鸡鸣@"
     ]
   },
+  
+  "paleoftheancients:Reimu": {
+    "MOVES": [
+      "阴阳宝玉",
+      "封魔针",
+      "追踪护符",
+      "灵符 [梦想封印 -集- ]",
+      "回灵 [梦想封印 -侘- ]",
+      "神灵 [梦想封印 -瞬- ]",
+      "梦符 [封魔阵]",
+      "神技 [八方鬼缚阵]",
+      "大结界 [博丽弹幕结界]"
+    ],
+    "NAME": "乐园的巫女"
+  },
+  "paleoftheancients:YinYangOrb": {
+    "NAME": "阴阳玉"
+  },
 
   "paleoftheancients:BardBoss": {
     "NAME": "吟游诗人",
@@ -132,7 +150,7 @@
   },
 
   "paleoftheancients:Thorton": {
-    "NAME": "索顿·约翰逊",
+    "NAME": "索顿·米尔泰彭",
     "MOVES": [
       "股票暴跌",
       "现金缓冲",
@@ -147,6 +165,10 @@
       "降职",
       "逃跑"
     ]
+  },
+  
+    "paleoftheancients:BASlime": {
+    "NAME": "模糊外形"
   },
 
   "paleoftheancients:N": {
