--- a/src/main/resources/paleoftheancients/localization/zhs/relics.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/relics.json
@@ -15,13 +15,43 @@
       "右键点击：？？？"
     ]
   },
+    "paleoftheancients:BlurryLens": {
+    "NAME": "模糊透镜",
+    "FLAVOR": "所有的东西看起来都有奇怪的缺陷。",
+    "DESCRIPTIONS": [
+      "右键： ", "模糊外表！"
+    ]
+  },
+  
   "paleoftheancients:SoulOfTheVixen": {
-    "NAME": "火狐之魂",
-    "FLAVOR": "激情燃烧。",
+    "NAME": "火狐之焰",
+    "FLAVOR": "自燃",
     "DESCRIPTIONS": [
       "每当你攻击时，给予敌人 2 层 #rpaleoftheancients:灼伤 。"
     ]
   },
+    "paleoftheancients:SoulOfTheHexaghost": {
+    "NAME": "等离子六火",
+    "FLAVOR": "回报大的惊人。但是周期实在是太长了，所以牌打着打着它就触发了。",
+    "DESCRIPTIONS": [
+      "每打出的第36张牌会被打出6次。"
+    ]
+  },
+  "paleoftheancients:SoulOfTheIroncluck": {
+    "NAME": "头盔……？",
+    "FLAVOR": "似乎被改造过了。",
+    "DESCRIPTIONS": [
+      "每当你获得格挡，抽一张牌。每当你抽到一张状态牌，获得 [E] 。"
+    ]
+  },
+  "paleoftheancients:SoulOfTheSilent": {
+    "NAME": "猎手绞索",
+    "FLAVOR": "看起来好像从来没被用过的样子。",
+    "DESCRIPTIONS": [
+      "每当你造成伤害，本回合你每打出一张牌敌人失去2生命。"
+    ]
+  },
+  
   "paleoftheancients:SoulOfTheDefect": {
     "NAME": "故障核心",
     "FLAVOR": "01000010 01100001 01101100 01100001 01101110 01100011 01100101",
@@ -37,11 +67,18 @@
     ]
   },
   "paleoftheancients:SoulOfTheThorton": {
-    "NAME": "索顿·约翰逊名片",
+    "NAME": "索顿·米尔泰彭名片",
     "FLAVOR": "那家伙在这里干什么？",
     "DESCRIPTIONS": [
-      "确认你是 NL #y“索顿·约翰逊” 。",
+      "确认你是 NL #y“索顿·米尔泰彭” 。",
       "索顿？"
+    ] 
+  },
+  "paleoftheancients:SoulOfTheShrineMaiden": {
+    "NAME": "退治妖怪的热诚",
+    "FLAVOR": "毕生都在退治妖怪和扫地。",
+    "DESCRIPTIONS": [
+      "如果你上一回合失去生命， [E] 。 NL 每当你 #y格挡 了伤害，你的回合结束前获得格挡量相等的 #r力量 。"
     ]
   }
 }
