--- a/src/main/resources/paleoftheancients/localization/eng/relics.json
+++ b/src/main/resources/paleoftheancients/localization/eng/relics.json
@@ -78,5 +78,14 @@
     "DESCRIPTIONS": [
       "If you lost HP last turn, gain [E] . NL Whenever you #yBlock damage, gain that much #rStrength until the end of your turn."
     ]
+  },
+  "paleoftheancients:SoulOfTheShapes": {
+    "NAME": "Shifting Mass",
+    "FLAVOR": "",
+    "DESCRIPTIONS": [
+      "Whenever you play a card, flip this relic. NL If it was a",
+      "n #rAttack, gain 3 Dexterity this turn.",
+      " #ySkill, gain 3 Attack this turn."
+    ]
   }
 }
